--- a/homework/Day_051_midterm.ipynb
+++ b/homework/Day_051_midterm.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "4                   2188.0       2598.0       1639297.0           126027.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        " 'total_stock_value']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,41 +609,41 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
     "lr = LogisticRegression(tol=0.001, penalty='l2', fit_intercept=True, C=1.0)\n",
-    "gdbt = GradientBoostingClassifier(tol=100, subsample=0.75, n_estimators=250, max_features=20,\n",
+    "gdbt = GradientBoostingClassifier(tol=100, subsample=0.75, n_estimators=250,\n",
     "                                  max_depth=6, learning_rate=0.03)\n",
     "rf = RandomForestClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8853754940711462\n"
+      "0.8316205533596838\n"
      ]
     }
    ],
    "source": [
-    "scores = cross_val_score(lr,train_X,train_Y,cv=5,scoring='accuracy')\n",
+    "scores = cross_val_score(gdbt,train_X,train_Y,cv=5,scoring='accuracy')\n",
     "print(scores.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 線性迴歸預測檔 (結果有部分隨機, 請以 Kaggle 計算的得分為準, 以下模型同理)\n",
-    "lr.fit(train_X, train_Y)\n",
-    "lr_pred = lr.predict_proba(test_X)[:,1]\n",
-    "sub = pd.DataFrame({'name': ids, 'poi': lr_pred})\n",
+    "gdbt.fit(train_X, train_Y)\n",
+    "gdbt_pred = gdbt.predict_proba(test_X)[:,1]\n",
+    "sub = pd.DataFrame({'name': ids, 'poi': gdbt_pred})\n",
     "# sub['Survived'] = sub['Survived'].map(lambda x:1 if x>0.5 else 0) \n",
-    "sub.to_csv('mid.csv', index=False) "
+    "sub.to_csv('mid_gdbt_v7.csv', index=False) "
    ]
   },
   {
