--- a/homework/Day68-Keras_Sequential_Model_HW.ipynb
+++ b/homework/Day68-Keras_Sequential_Model_HW.ipynb
@@ -4,22 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 課程目標:\n",
+    "\n",
+    "# 作業目標:\n",
     "    \n",
-    "    了解順序模型的用途\n",
+    "    了解keras 模型架構\n",
+    "\n",
+    "\n",
+    "# 作業重點:\n",
     "    \n",
-    "    利用順序模型建立網路模型"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 範例重點: \n",
-    "    \n",
-    "    說明神經網路模型在Keras 所需相關的 library\n",
-    "    \n",
-    "    使用 CIFAR 10 做為實際例子"
+    "    請修改input shape: (Conv2D(64, (3, 3))的設定, 新增一層 Dense 並觀看 model.summary 的輸出\n"
    ]
   },
   {
@@ -70,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,65 +94,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\Jeffrey.yc Chen\\Anaconda3\\envs\\Pytorch\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\Users\\Jeffrey.yc Chen\\Anaconda3\\envs\\Pytorch\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:148: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3733: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
      ]
     }
    ],
    "source": [
-    "# build our CNN model\n",
+    "# build our CNN model, 多加幾層\n",
     "model = Sequential()\n",
     "model.add(Conv2D(64, (3, 3), padding='same',\n",
     "                 input_shape=x_train.shape[1:]))\n",
-    "model.add(Activation('relu'))\n",
-    "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(512))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "\n",
     "model.add(Dense(num_classes))\n",
-    "model.add(Activation('softmax'))"
+    "model.add(Activation('softmax'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
       "conv2d_1 (Conv2D)            (None, 32, 32, 64)        1792      \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 32, 32, 64)        0         \n",
-      "_________________________________________________________________\n",
       "flatten_1 (Flatten)          (None, 65536)             0         \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 512)               33554944  \n",
       "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 512)               0         \n",
+      "activation_1 (Activation)    (None, 512)               0         \n",
       "_________________________________________________________________\n",
       "dropout_1 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
       "dense_2 (Dense)              (None, 10)                5130      \n",
       "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 10)                0         \n",
+      "activation_2 (Activation)    (None, 10)                0         \n",
       "=================================================================\n",
       "Total params: 33,561,866\n",
       "Trainable params: 33,561,866\n",
@@ -170,6 +162,59 @@
     }
    ],
    "source": [
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_10\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_7 (Conv2D)            (None, 32, 32, 64)        1792      \n",
+      "_________________________________________________________________\n",
+      "flatten_8 (Flatten)          (None, 65536)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 512)               33554944  \n",
+      "_________________________________________________________________\n",
+      "activation_15 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_8 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 10)                5130      \n",
+      "_________________________________________________________________\n",
+      "activation_16 (Activation)   (None, 10)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 1024)              11264     \n",
+      "=================================================================\n",
+      "Total params: 33,573,130\n",
+      "Trainable params: 33,573,130\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build our CNN model, 多加幾層\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(64, (3, 3), padding='same',\n",
+    "                 input_shape=x_train.shape[1:]))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Dense(num_classes))\n",
+    "model.add(Activation('softmax'))\n",
+    "model.add(Dense(1024))\n",
+    "\n",
     "print(model.summary())"
    ]
   },
