--- a/homework/final_exam/Day101_finalexam.ipynb
+++ b/homework/final_exam/Day101_finalexam.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 作業\n",
-    "礙於不是所有同學都有 GPU ，這邊的範例使用的是簡化版本的 ResNet，確保所有同學都能夠順利訓練!\n",
-    "\n",
-    "\n",
-    "最後一天的作業請閱讀這篇非常詳盡的[文章](https://blog.gtwang.org/programming/keras-resnet-50-pre-trained-model-build-dogs-cats-image-classification-system/)，基本上已經涵蓋了所有訓練　CNN 常用的技巧，請使用所有學過的訓練技巧，盡可能地提高 Cifar-10 的 test data 準確率，截圖你最佳的結果並上傳來完成最後一次的作業吧!\n",
-    "\n",
-    "另外這些技巧在 Kaggle 上也會被許多人使用，更有人會開發一些新的技巧，例如使把預訓練在 ImageNet 上的模型當成 feature extractor 後，再拿擷取出的特徵重新訓練新的模型，這些技巧再進階的課程我們會在提到，有興趣的同學也可以[參考](https://www.kaggle.com/insaff/img-feature-extraction-with-pretrained-resnet)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -39,22 +26,7 @@
     "from PIL import Image\n",
     "from keras.models import Model\n",
     "from keras.optimizers import Adam\n",
-    "from keras.utils import to_categorical\n",
-    "\n",
-    "# 讀取資料集並作前處理\n",
-    "# (x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
-    "# print('x_train shape:', x_train.shape)\n",
-    "# print(x_train.shape[0], 'train samples')\n",
-    "# print(x_test.shape[0], 'test samples')\n",
-    "# x_train = x_train.astype('float32')\n",
-    "# x_test = x_test.astype('float32')\n",
-    "\n",
-    "#standardize\n",
-    "# x_train = x_train / 255.\n",
-    "# x_test = x_test / 255.\n",
-    "# y_train = to_categorical(y_train, 10)\n",
-    "# y_test = to_categorical(y_test, 10)\n",
-    "# 建立 ResNet 模型\n"
+    "from keras.utils import to_categorical"
    ]
   },
   {
@@ -73,8 +45,7 @@
    "source": [
     "train_path = './train'\n",
     "test_path = './test'\n",
-    "train_batches = ImageDataGenerator().flow_from_directory(train_path, target_size=(224,224), batch_size=10)\n",
-    "# test_batches = ImageDataGenerator().flow_from_directory(test_path, target_size=(224,224), batch_size=10)"
+    "train_batches = ImageDataGenerator().flow_from_directory(train_path, target_size=(224,224), batch_size=10)"
    ]
   },
   {
@@ -169,7 +140,8 @@
     "model = Sequential()\n",
     "for layer in vgg16_model.layers[:-1]:\n",
     "    model.add(layer)\n",
-    "model.summary()"
+    "model.summary()\n",
+    "#layers.pop() doesn't work properly in tf2.0 -> import less 1 layer to adjust to current classification"
    ]
   },
   {
@@ -237,7 +209,7 @@
     }
    ],
    "source": [
-    "# model.layers.pop() #tf2.0 pop don't work\n",
+    "#only train the last customized later\n",
     "for layer in model.layers:\n",
     "    layer.trainable = False\n",
     "model.add(Dense(5, activation='softmax'))\n",
@@ -378,6 +350,7 @@
     }
    ],
    "source": [
+    "#2728 is the total count of trian pics, 10 is the batch size\n",
     "history = model.fit_generator(train_batches,\n",
     "                              steps_per_epoch=(int(2728/10)+1), # 一個 epochs 要執行幾次 update，通常是資料量除以 batch size\n",
     "                              epochs=50,\n",
@@ -399,6 +372,7 @@
     }
    ],
    "source": [
+    "#sample code for tqdm\n",
     "from time import sleep\n",
     "from tqdm import tqdm, trange\n",
     "\n",
@@ -431,7 +405,7 @@
     "    x = x.reshape((1,) + x.shape)\n",
     "    y = model.predict_classes(x)\n",
     "    name.append(imgname)\n",
-    "    label.append(int(y))"
+    "    label.append(int(y)) #original y is numpy array"
    ]
   },
   {
@@ -441,7 +415,7 @@
    "outputs": [],
    "source": [
     "submit = pd.DataFrame([name,label])\n",
-    "submit=submit.T\n",
+    "submit=submit.T #transform\n",
     "submit.rename(columns={0:'id',1:'flower_class'},inplace=True)"
    ]
   },
@@ -482,7 +456,7 @@
     }
    ],
    "source": [
-    "submit['id']"
+    "submit['id'] #check the id doesn't consist of .jpg"
    ]
   },
   {
@@ -2507,6 +2481,7 @@
     }
    ],
    "source": [
+    "#sample code for list all file in folder\n",
     "import os \n",
     "for imgname in os.listdir(test_path): # 参数是文件夹路径\n",
     "    print ( imgname ) # imgname是文件夹中图片文件名"
@@ -2518,24 +2493,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score = model.pre\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
+    "#what can improve?\n",
+    "1.image augment(add parameter in Imagegenerator)\n",
+    "2.change optimizer\n",
+    "3.split the train data into train/valid dataset to check any overfitting\n",
+    "4.use 'save best weight' to avoid meaningless training"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
